--- a/css/server/package.json
+++ b/css/server/package.json
@@ -1,18 +1,18 @@
 {
-	"name": "vscode-css-server",
-	"description": "CSS/LESS/SCSS language server",
-	"version": "0.0.1",
-	"author": "Microsoft Corporation",
-	"license": "MIT",
-	"engines": {
-		"node": "*"
-	},
-	"dependencies": {
-		"vscode-languageserver": "^2.2.0",
-		"vscode-css-languageservice": "^1.0.4"
-	},
-	"scripts": {
-		"compile": "gulp compile-extension:css-server",
-		"watch": "gulp watch-extension:css-server"
-	}
+  "name": "vscode-css-server",
+  "description": "CSS/LESS/SCSS language server",
+  "version": "0.0.1",
+  "author": "Microsoft Corporation",
+  "license": "MIT",
+  "engines": {
+    "node": "*"
+  },
+  "dependencies": {
+    "vscode-css-languageservice": "^1.0.5-next.1",
+    "vscode-languageserver": "^2.2.0"
+  },
+  "scripts": {
+    "compile": "gulp compile-extension:css-server",
+    "watch": "gulp watch-extension:css-server"
+  }
 }
