Migrate all other languages to language-configuration.json

--- a/markdown/package.json
+++ b/markdown/package.json
@@ -31,7 +31,7 @@
 					".markdown",
 					".markdn"
 				],
-				"configuration": "./markdown.configuration.json"
+				"configuration": "./language-configuration.json"
 			}
 		],
 		"grammars": [
