--- a/ruby/package.json
+++ b/ruby/package.json
@@ -9,7 +9,7 @@
 			"extensions": [ ".rb", ".rbx", ".rjs", ".gemspec", ".pp", ".rake", ".ru" ],
 			"filenames": [ "rakefile", "gemfile", "guardfile" ],
 			"aliases": [ "Ruby", "rb" ],
-			"configuration": "./ruby.configuration.json"
+			"configuration": "./language-configuration.json"
 		}],
 		"grammars": [{
 			"language": "ruby",
