--- a/html/package.json
+++ b/html/package.json
@@ -2,7 +2,20 @@
 	"name": "html",
 	"version": "0.1.0",
 	"publisher": "vscode",
-	"engines": { "vscode": "*" },
+	"engines": {
+		"vscode": "0.10.x"
+	},
+	"activationEvents": [
+		"onLanguage:html"
+	],
+	"main": "./client/out/htmlMain",
+	"scripts": {
+		"compile": "gulp compile-extension:html-client && gulp compile-extension:html-server",
+		"postinstall": "cd server && npm install",
+		"update-grammar": "node ../../build/npm/update-grammar.js textmate/html.tmbundle Syntaxes/HTML.plist ./syntaxes/html.json",
+		"install-client-next": "npm install vscode-languageclient@next -f -S",
+		"install-client-local": "npm install ../../../vscode-languageserver-node/client -f -S"
+	},
 	"contributes": {
 		"languages": [{
 			"id": "html",
@@ -11,10 +24,71 @@
 			"mimetypes": ["text/html", "text/x-jshtm", "text/template", "text/ng-template", "application/xhtml+xml"]
 		}],
 		"grammars": [{
-			/* "language": "html", not yet enabled*/
+			"language": "html",
 			"scopeName": "text.html.basic",
-			"path": "./syntaxes/HTML.plist"
-		}]
+			"path": "./syntaxes/html.json"
+		}],
+		"configuration": {
+			"id": "html",
+			"order": 20,
+			"type": "object",
+			"title": "HTML",
+			"properties": {
+				"html.format.wrapLineLength": {
+					"type": "integer",
+					"default": 120,
+					"description": "Maximum amount of characters per line (0 = disable)."
+				},
+				"html.format.unformatted": {
+					"type": [
+						"string",
+						"null"
+					],
+					"default": "a, abbr, acronym, b, bdo, big, br, button, cite, code, dfn, em, i, img, input, kbd, label, map, object, q, samp, script, select, small, span, strong, sub, sup, textarea, tt, var",
+					"description": "List of tags, comma separated, that shouldn't be reformatted. 'null' defaults to all tags listed at https://www.w3.org/TR/html5/dom.html#phrasing-content."
+				},
+				"html.format.indentInnerHtml": {
+					"type": "boolean",
+					"default": false,
+					"description": "Indent <head> and <body> sections."
+				},
+				"html.format.preserveNewLines": {
+					"type": "boolean",
+					"default": true,
+					"description": "Whether existing line breaks before elements should be preserved. Only works before elements, not inside tags or for text."
+				},
+				"html.format.maxPreserveNewLines": {
+					"type": [
+						"number",
+						"null"
+					],
+					"default": null,
+					"description": "Maximum number of line breaks to be preserved in one chunk. Use 'null' for unlimited."
+				},
+				"html.format.indentHandlebars": {
+					"type": "boolean",
+					"default": false,
+					"description": "Format and indent {{#foo}} and {{/foo}}."
+				},
+				"html.format.endWithNewline": {
+					"type": "boolean",
+					"default": false,
+					"description": "End with a newline."
+				},
+				"html.format.extraLiners": {
+					"type": [
+						"string",
+						"null"
+					],
+					"default": "head, body, /html",
+					"description": "List of tags, comma separated, that should have an extra newline before them. 'null' defaults to \"head, body, /html\"."
+				}
+			}
+		}
+	},
+	"dependencies": {
+		"vscode-languageclient": "^2.4.2-next.3",
+		"vscode-nls": "^1.0.7"
 	}
 
 }
