--- a/theme-defaults/package.json
+++ b/theme-defaults/package.json
@@ -33,6 +33,26 @@
 				"uiTheme": "hc-black",
 				"path": "./themes/hc_black.json"
 			}
+		],
+		"fileIcons": [
+			{
+				"id": "vs-dark-standard",
+				"label": "Dark Theme File Icons (Default)",
+				"uiTheme": "vs-dark",
+				"path": "./fileicons/dark_standard.json"
+			},
+			{
+				"id": "vs-light-standard",
+				"label": "Light Theme File Icons (Default)",
+				"uiTheme": "vs",
+				"path": "./fileicons/light_standard.json"
+			},
+			{
+				"id": "vs-highcontrast-standard",
+				"label": "High Contrast Theme File Icons (Default)",
+				"uiTheme": "hc-black",
+				"path": "./fileicons/light_standard.json"
+			}
 		]
 	}
 }
