[icons] rename contribution point to 'iconThemes'

--- a/theme-defaults/package.json
+++ b/theme-defaults/package.json
@@ -34,7 +34,7 @@
 				"path": "./themes/hc_black.json"
 			}
 		],
-		"fileIcons": [
+		"iconThemes": [
 			{
 				"id": "vs-standard",
 				"label": "Visual Studio File Icons",
