[icons] rename standard file icons to 'Standard'

--- a/theme-defaults/package.json
+++ b/theme-defaults/package.json
@@ -37,7 +37,7 @@
 		"iconThemes": [
 			{
 				"id": "vs-standard",
-				"label": "Visual Studio File Icons",
+				"label": "Standard",
 				"path": "./fileicons/vs_standard.json"
 			}
 		]
