[html] Comment shortcut (Cmd + /) stopped working in HTML. fixes #12083

--- a/handlebars/package.json
+++ b/handlebars/package.json
@@ -13,7 +13,8 @@
 			"id": "handlebars",
 			"extensions": [ ".handlebars", ".hbs"],
 			"aliases": [ "Handlebars", "handlebars" ],
-			"mimetypes": ["text/x-handlebars-template"]
+			"mimetypes": ["text/x-handlebars-template"],
+			"configuration": "./language-configuration.json"
 		}],
 		"grammars": [{
       "language": "handlebars",
