--- a/html/package.json
+++ b/html/package.json
@@ -23,7 +23,8 @@
 			"id": "html",
 			"extensions": [ ".html", ".htm", ".shtml", ".xhtml", ".mdoc", ".jsp", ".asp", ".aspx", ".jshtm", ".vue" ],
 			"aliases": [ "HTML", "htm", "html", "xhtml" ],
-			"mimetypes": ["text/html", "text/x-jshtm", "text/template", "text/ng-template", "application/xhtml+xml"]
+			"mimetypes": ["text/html", "text/x-jshtm", "text/template", "text/ng-template", "application/xhtml+xml"],
+      "configuration": "./language-configuration.json"
 		}],
 		"grammars": [{
       "language": "html",
