--- a/yaml/package.json
+++ b/yaml/package.json
@@ -3,6 +3,9 @@
 	"version": "0.1.0",
 	"publisher": "vscode",
 	"engines": { "vscode": "*" },
+	"scripts": {
+		"update-grammar": "node ../../build/npm/update-grammar.js textmate/yaml.tmbundle Syntaxes/YAML.tmLanguage ./syntaxes/yaml.json"
+	},
 	"contributes": {
 		"languages": [{
 			"id": "yaml",
