[yaml] update grammar, add tests, update license

--- a/yaml/package.json
+++ b/yaml/package.json
@@ -17,7 +17,7 @@
 		"grammars": [{
 			"language": "yaml",
 			"scopeName": "source.yaml",
-			"path": "./syntaxes/YAML.plist"
+			"path": "./syntaxes/yaml.json"
 		}]
 	}
 }
