--- a/monaco/package.json
+++ b/monaco/package.json
@@ -1,7 +1,7 @@
 {
   "name": "monaco-editor-core",
   "private": true,
-  "version": "0.7.0-next.5",
+  "version": "0.7.1",
   "description": "A browser based code editor",
   "author": "Microsoft Corporation",
   "license": "MIT",
